--- a/Notebook/Test02.ipynb
+++ b/Notebook/Test02.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_270417/412837057.py:19: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "/tmp/ipykernel_5169/412837057.py:19: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use(\"seaborn-whitegrid\")\n"
      ]
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "<AxesSubplot: xlabel='Life_Style_Index', ylabel='Density'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "<AxesSubplot: xlabel='Var1', ylabel='Density'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filling the column in with its mode value\n",
+    "train[\"Customer_Since_Months\"].fillna(10, inplace=True)\n",
+    "test[\"Customer_Since_Months\"].fillna(10, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +366,7 @@
        "      <th>2</th>\n",
        "      <td>T0005689464</td>\n",
        "      <td>41.58</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>none</td>\n",
        "      <td>10.0</td>\n",
        "      <td>2.79805</td>\n",
        "      <td>B</td>\n",
@@ -508,7 +519,7 @@
        "      <th>11</th>\n",
        "      <td>T0005689477</td>\n",
        "      <td>90.93</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>none</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.95327</td>\n",
        "      <td>C</td>\n",
@@ -543,7 +554,7 @@
        "      <td>T0005689482</td>\n",
        "      <td>31.16</td>\n",
        "      <td>B</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>2.69170</td>\n",
        "      <td>B</td>\n",
        "      <td>A</td>\n",
@@ -576,7 +587,7 @@
        "      <th>15</th>\n",
        "      <td>T0005689485</td>\n",
        "      <td>14.18</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>none</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.16167</td>\n",
        "      <td>A</td>\n",
@@ -628,7 +639,7 @@
        "      <td>T0005689491</td>\n",
        "      <td>13.94</td>\n",
        "      <td>B</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>2.35974</td>\n",
        "      <td>B</td>\n",
        "      <td>B</td>\n",
@@ -665,7 +676,7 @@
        "        Trip_ID  Trip_Distance Type_of_Cab  Customer_Since_Months  \\\n",
        "0   T0005689460           6.77           B                    1.0   \n",
        "1   T0005689461          29.47           B                   10.0   \n",
-       "2   T0005689464          41.58         NaN                   10.0   \n",
+       "2   T0005689464          41.58        none                   10.0   \n",
        "3   T0005689465          61.56           C                   10.0   \n",
        "4   T0005689467          54.95           C                   10.0   \n",
        "5   T0005689469          19.06           E                   10.0   \n",
@@ -674,14 +685,14 @@
        "8   T0005689473         106.80           C                    3.0   \n",
        "9   T0005689474         107.19           D                    5.0   \n",
        "10  T0005689475          46.07           D                   10.0   \n",
-       "11  T0005689477          90.93         NaN                    0.0   \n",
+       "11  T0005689477          90.93        none                    0.0   \n",
        "12  T0005689479          39.73           B                   10.0   \n",
-       "13  T0005689482          31.16           B                    NaN   \n",
+       "13  T0005689482          31.16           B                   10.0   \n",
        "14  T0005689484          83.53           C                    0.0   \n",
-       "15  T0005689485          14.18         NaN                    1.0   \n",
+       "15  T0005689485          14.18        none                    1.0   \n",
        "16  T0005689486          56.83           E                    4.0   \n",
        "17  T0005689487          14.12           D                    3.0   \n",
-       "18  T0005689491          13.94           B                    NaN   \n",
+       "18  T0005689491          13.94           B                   10.0   \n",
        "19  T0005689492          81.70           A                    0.0   \n",
        "\n",
        "    Life_Style_Index Confidence_Life_Style_Index Destination_Type  \\\n",
@@ -751,7 +762,7 @@
        "19                   3  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,14 +776,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# in type of cab I tried a different imputation technique keeping none as saperate category\n",
     "train[\"Type_of_Cab\"].fillna(\"none\", inplace=True)\n",
-    "test[\"Type_of_Cab\"]"
+    "test[\"Type_of_Cab\"].fillna(\"none\", inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Trip_ID                        0\n",
+       "Trip_Distance                  0\n",
+       "Type_of_Cab                    0\n",
+       "Customer_Since_Months          0\n",
+       "Life_Style_Index               0\n",
+       "Confidence_Life_Style_Index    0\n",
+       "Destination_Type               0\n",
+       "Customer_Rating                0\n",
+       "Cancellation_Last_1Month       0\n",
+       "Var1                           0\n",
+       "Var2                           0\n",
+       "Var3                           0\n",
+       "Gender                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Trip_ID', 'Type_of_Cab', 'Confidence_Life_Style_Index', 'Destination_Type', 'Gender']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one-hot encoding for data is best method  but consumed memeory so label encoding was used. It converts the\n",
+    "# coategorical data to numerical categories chosen randomly\n",
+    "s = (train.dtypes == 'object')\n",
+    "object_cols = list(s[s].index)\n",
+    "from sklearn import preprocessing\n",
+    "label_encoder = preprocessing.LabelEncoder()\n",
+    "print(object_cols)\n",
+    "train['Trip_ID']= label_encoder.fit_transform(train['Trip_ID'])\n",
+    "train['Type_of_Cab']= label_encoder.fit_transform(train['Type_of_Cab'])\n",
+    "train['Confidence_Life_Style_Index']= label_encoder.fit_transform(train['Confidence_Life_Style_Index'])\n",
+    "train['Destination_Type']= label_encoder.fit_transform(train['Destination_Type'])\n",
+    "train['Gender']= label_encoder.fit_transform(train['Gender'])\n",
+    "test['Trip_ID']= label_encoder.fit_transform(test['Trip_ID'])\n",
+    "test['Type_of_Cab']= label_encoder.fit_transform(test['Type_of_Cab'])\n",
+    "test['Confidence_Life_Style_Index']= label_encoder.fit_transform(test['Confidence_Life_Style_Index'])\n",
+    "test['Destination_Type']= label_encoder.fit_transform(test['Destination_Type'])\n",
+    "test['Gender']= label_encoder.fit_transform(test['Gender'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -791,7 +875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0 (default, Mar  3 2022, 09:58:08) [GCC 7.5.0]"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
