--- a/Notebook/Test02.ipynb
+++ b/Notebook/Test02.ipynb
@@ -17,7 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5169/412837057.py:19: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "/tmp/ipykernel_15839/412837057.py:19: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use(\"seaborn-whitegrid\")\n"
      ]
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mode is / are: B\n",
+      "Mode is / are: B\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confidence life style index is discrete features and classification variable. hence used mode strategy with it.  \n",
+    "# it has lesser missing values so mode  strategy would not lead to bad  pedictions.\n",
+    "\n",
+    "from collections import Counter\n",
+    "n_num = train.Confidence_Life_Style_Index\n",
+    "n = len(n_num)\n",
+    "\n",
+    "data = Counter(n_num)\n",
+    "get_mode = dict(data)\n",
+    "mode = [k for k, v in get_mode.items() if v == max(list(data.values()))]\n",
+    "\n",
+    "if len(mode) == n:\n",
+    "    get_mode = \"No mode found\"\n",
+    "\n",
+    "else:\n",
+    "    get_mode=\"Mode is / are: \" + ', '.join(map(str, mode))\n",
+    "\n",
+    "print(get_mode)\n",
+    "n_num = test.Confidence_Life_Style_Index\n",
+    "n = len(n_num)\n",
+    "\n",
+    "\n",
+    "data = Counter(n_num)\n",
+    "get_mode = dict(data)\n",
+    "mode = [k for k, v in get_mode.items() if v == max(list(data.values()))]\n",
+    "\n",
+    "if len(mode) == n:\n",
+    "    get_mode = \"No mode found\"\n",
+    "else:\n",
+    "    get_mode = \"Mode is / are: \" + ', '.join(map(str, mode))\n",
+    "\n",
+    "print(get_mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +415,7 @@
        "      <th>2</th>\n",
        "      <td>T0005689464</td>\n",
        "      <td>41.58</td>\n",
-       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>10.0</td>\n",
        "      <td>2.79805</td>\n",
        "      <td>B</td>\n",
@@ -519,7 +568,7 @@
        "      <th>11</th>\n",
        "      <td>T0005689477</td>\n",
        "      <td>90.93</td>\n",
-       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.95327</td>\n",
        "      <td>C</td>\n",
@@ -587,7 +636,7 @@
        "      <th>15</th>\n",
        "      <td>T0005689485</td>\n",
        "      <td>14.18</td>\n",
-       "      <td>none</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.16167</td>\n",
        "      <td>A</td>\n",
@@ -676,7 +725,7 @@
        "        Trip_ID  Trip_Distance Type_of_Cab  Customer_Since_Months  \\\n",
        "0   T0005689460           6.77           B                    1.0   \n",
        "1   T0005689461          29.47           B                   10.0   \n",
-       "2   T0005689464          41.58        none                   10.0   \n",
+       "2   T0005689464          41.58         NaN                   10.0   \n",
        "3   T0005689465          61.56           C                   10.0   \n",
        "4   T0005689467          54.95           C                   10.0   \n",
        "5   T0005689469          19.06           E                   10.0   \n",
@@ -685,11 +734,11 @@
        "8   T0005689473         106.80           C                    3.0   \n",
        "9   T0005689474         107.19           D                    5.0   \n",
        "10  T0005689475          46.07           D                   10.0   \n",
-       "11  T0005689477          90.93        none                    0.0   \n",
+       "11  T0005689477          90.93         NaN                    0.0   \n",
        "12  T0005689479          39.73           B                   10.0   \n",
        "13  T0005689482          31.16           B                   10.0   \n",
        "14  T0005689484          83.53           C                    0.0   \n",
-       "15  T0005689485          14.18        none                    1.0   \n",
+       "15  T0005689485          14.18         NaN                    1.0   \n",
        "16  T0005689486          56.83           E                    4.0   \n",
        "17  T0005689487          14.12           D                    3.0   \n",
        "18  T0005689491          13.94           B                   10.0   \n",
@@ -762,7 +811,7 @@
        "19                   3  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +858,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -849,6 +898,221 @@
     "test['Confidence_Life_Style_Index']= label_encoder.fit_transform(test['Confidence_Life_Style_Index'])\n",
     "test['Destination_Type']= label_encoder.fit_transform(test['Destination_Type'])\n",
     "test['Gender']= label_encoder.fit_transform(test['Gender'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mi_scores help to see which columns are most relevant to the target and helps eliminate the lesser important \n",
+    "#variables for a better model. \n",
+    "y=train.Surge_Pricing_Type\n",
+    "X=train.drop(['Surge_Pricing_Type'],axis=1)\n",
+    "\n",
+    "# All discrete features should now have integer dtypes (double-check this before using MI!)\n",
+    "discrete_features = X.dtypes==int\n",
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "\n",
+    "def make_mi_scores(X, y):\n",
+    "    mi_scores = mutual_info_classif(X, y, random_state=0, discrete_features=discrete_features)\n",
+    "    mi_scores = pd.Series(mi_scores, name=\"MI Scores\", index=X.columns)\n",
+    "    mi_scores = mi_scores.sort_values(ascending=False)\n",
+    "    return mi_scores\n",
+    "#mutual_info_classif takes integer arguments and separates discrete features from continous ones. and then \n",
+    "#arranging them in descending order and plot_mi_scores draws a graph for better reoresentation in ascending order\n",
+    "\n",
+    "def plot_mi_scores(scores):\n",
+    "    scores = scores.sort_values(ascending=True)\n",
+    "    width = np.arange(len(scores))\n",
+    "    ticks = list(scores.index)\n",
+    "    plt.barh(width, scores)\n",
+    "    plt.yticks(width, ticks)\n",
+    "    plt.title(\"Mutual Information Scores\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "arrays used as indices must be of integer (or boolean) type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mi_scores \u001b[39m=\u001b[39m make_mi_scores(X, y)\n\u001b[1;32m      2\u001b[0m mi_scores\n",
+      "Cell \u001b[0;32mIn[17], line 11\u001b[0m, in \u001b[0;36mmake_mi_scores\u001b[0;34m(X, y)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmake_mi_scores\u001b[39m(X, y):\n\u001b[0;32m---> 11\u001b[0m     mi_scores \u001b[39m=\u001b[39m mutual_info_classif(X, y, random_state\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m, discrete_features\u001b[39m=\u001b[39;49mdiscrete_features)\n\u001b[1;32m     12\u001b[0m     mi_scores \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mSeries(mi_scores, name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMI Scores\u001b[39m\u001b[39m\"\u001b[39m, index\u001b[39m=\u001b[39mX\u001b[39m.\u001b[39mcolumns)\n\u001b[1;32m     13\u001b[0m     mi_scores \u001b[39m=\u001b[39m mi_scores\u001b[39m.\u001b[39msort_values(ascending\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "File \u001b[0;32m~/project/Feynn_Labs/Project2 /Online-Vehicle-Booking-Market/venv/lib/python3.10/site-packages/sklearn/feature_selection/_mutual_info.py:468\u001b[0m, in \u001b[0;36mmutual_info_classif\u001b[0;34m(X, y, discrete_features, n_neighbors, copy, random_state)\u001b[0m\n\u001b[1;32m    394\u001b[0m \u001b[39m\"\"\"Estimate mutual information for a discrete target variable.\u001b[39;00m\n\u001b[1;32m    395\u001b[0m \n\u001b[1;32m    396\u001b[0m \u001b[39mMutual information (MI) [1]_ between two random variables is a non-negative\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    465\u001b[0m \u001b[39m       of a Random Vector:, Probl. Peredachi Inf., 23:2 (1987), 9-16\u001b[39;00m\n\u001b[1;32m    466\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    467\u001b[0m check_classification_targets(y)\n\u001b[0;32m--> 468\u001b[0m \u001b[39mreturn\u001b[39;00m _estimate_mi(X, y, discrete_features, \u001b[39mTrue\u001b[39;49;00m, n_neighbors, copy, random_state)\n",
+      "File \u001b[0;32m~/project/Feynn_Labs/Project2 /Online-Vehicle-Booking-Market/venv/lib/python3.10/site-packages/sklearn/feature_selection/_mutual_info.py:270\u001b[0m, in \u001b[0;36m_estimate_mi\u001b[0;34m(X, y, discrete_features, discrete_target, n_neighbors, copy, random_state)\u001b[0m\n\u001b[1;32m    268\u001b[0m \u001b[39mif\u001b[39;00m discrete_features\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mbool\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m    269\u001b[0m     discrete_mask \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(n_features, dtype\u001b[39m=\u001b[39m\u001b[39mbool\u001b[39m)\n\u001b[0;32m--> 270\u001b[0m     discrete_mask[discrete_features] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    271\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    272\u001b[0m     discrete_mask \u001b[39m=\u001b[39m discrete_features\n",
+      "\u001b[0;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
+     ]
+    }
+   ],
+   "source": [
+    "mi_scores = make_mi_scores(X, y)\n",
+    "mi_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Trip_ID</th>\n",
+       "      <th>Trip_Distance</th>\n",
+       "      <th>Type_of_Cab</th>\n",
+       "      <th>Customer_Since_Months</th>\n",
+       "      <th>Life_Style_Index</th>\n",
+       "      <th>Confidence_Life_Style_Index</th>\n",
+       "      <th>Destination_Type</th>\n",
+       "      <th>Customer_Rating</th>\n",
+       "      <th>Cancellation_Last_1Month</th>\n",
+       "      <th>Var1</th>\n",
+       "      <th>Var2</th>\n",
+       "      <th>Var3</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6.77</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.42769</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.90500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>29.47</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.78245</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.45000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>41.58</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.79805</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.50125</td>\n",
+       "      <td>2</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>77</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>61.56</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.79805</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.45375</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>54.95</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.03453</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.40250</td>\n",
+       "      <td>4</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>102</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Trip_ID  Trip_Distance  Type_of_Cab  Customer_Since_Months  \\\n",
+       "0        0           6.77            1                    1.0   \n",
+       "1        1          29.47            1                   10.0   \n",
+       "2        2          41.58            5                   10.0   \n",
+       "3        3          61.56            2                   10.0   \n",
+       "4        4          54.95            2                   10.0   \n",
+       "\n",
+       "   Life_Style_Index  Confidence_Life_Style_Index  Destination_Type  \\\n",
+       "0           2.42769                            0                 0   \n",
+       "1           2.78245                            1                 0   \n",
+       "2           2.79805                            1                 4   \n",
+       "3           2.79805                            1                 0   \n",
+       "4           3.03453                            1                 0   \n",
+       "\n",
+       "   Customer_Rating  Cancellation_Last_1Month  Var1  Var2  Var3  Gender  \n",
+       "0          3.90500                         0  40.0    46    60       0  \n",
+       "1          3.45000                         0  38.0    56    78       1  \n",
+       "2          3.50125                         2  61.0    56    77       1  \n",
+       "3          3.45375                         0  61.0    52    74       1  \n",
+       "4          3.40250                         4  51.0    49   102       1  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
    ]
   },
   {
